
[package]
name = "qsc-rs-simple-contracts"
version = "0.3.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
parking_lot = "0.12"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sha3 = "0.10"
blake2 = "0.10"
once_cell = "1.19"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3

[[bin]]
name = "qsc-rs-simple-contracts"
path = "src/main.rs"

[[bin]]
name = "qsc-tools"
path = "src/bin/qsc-tools.rs"
